# owlang

./: .gitignore  Cargo.toml  LICENSE.md  README  README.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml
.trunk/: trunk.yaml
docs/: grammar.ebnf  grammar.md  language_spec.md
scripts/: bootstrap.ps1  bootstrap.sh  run_ci_locally.ps1  run_ci_locally.sh
src/codegen/: Cargo.toml
src/codegen/src/: lib.rs
src/lexer/: Cargo.toml
src/lexer/src/: lib.rs
src/owc/: Cargo.toml
src/owc/src/: main.rs
src/owlib/: Cargo.toml
src/owlib/src/: lib.rs
src/owm/: Cargo.toml
src/parser/: Cargo.toml
src/parser/src/: lib.rs
src/semantic/: Cargo.toml
src/semantic/src/: lib.rs
src/tools/linter/: Cargo.toml
